[package]
name = "conpot"
version = "0.4.0"
authors = ["Franklin Delehelle <franklin.delehelle@odena.eu>"]
description = "Boilerplate-free configuration management"
license = "MIT/X11 OR Apache-2.0"
documentation = "https://docs.rs/conpot"
repository = "https://github.com/delehef/conpot"
edition = "2018"

[dependencies]
directories-next = "^2.0"
serde = "^1.0"
serde_yaml = { version = "0.8", optional = true }
toml = { version = "^0.5", optional = true }

[features]
default = ["toml_conf"]
toml_conf = ["toml"]
yaml_conf = ["serde_yaml"]

[[example]]
name = "simple"

[dev-dependencies]
serde_derive = "^1.0"
tempfile = "3.2.0"
